# predict_sick_structured

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 202223_Fall_AA_Group11_Notebook.ipynb
predsick/: __init__.py  dataset.py  features.py  plots.py
predsick/modeling/: predict.py  train.py
