[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "predsick"
version = "0.0.1"
description = "Using predictive models, I will predict the sick people, given their characteristics. "
authors = [
  { name = "ICD" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["predsick"]
include = ["pyproject.toml", "predsick/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["predsick"]
force-sort-within-sections = true

